SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1131898

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -8,6 +8,8 @@ Name[ca@valencia]=Protocol de missatgeria instantània del KAddressbook
 Name[de]=Instant-Messaging-Protokoll im KDE-Adressbuch
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[es]=Protocolo de mensajería instantánea de KAddressbook
+Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
+Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
