--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Protocol AIM
 Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
 Comment[es]=Protocolo AIM
+Comment[ga]=Prótacal AIM
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
@@ -26,6 +27,7 @@ Name[ca@valencia]=AIM
 Name[de]=AIM
 Name[en_GB]=AIM
 Name[es]=AIM
+Name[ga]=AIM
 Name[km]=AIM​
 Name[nb]=AIM
 Name[nds]=AIM
