--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Protocol Gadu-Gadu
 Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[es]=Protocolo Gadu-Gadu
+Comment[ga]=Prótacal Gadu-Gadu
+Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nn]=Gadu-Gadu-protokoll
@@ -25,6 +27,8 @@ Name[ca@valencia]=Gadu-Gadu
 Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[es]=Gadu-Gadu
+Name[ga]=Gadu-Gadu
+Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
