--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -8,6 +8,8 @@ Comment[ca]=Novell GroupWise Messenger
 Comment[ca@valencia]=Novell GroupWise Messenger
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
+Comment[ga]=Teachtaire Novell GroupWise
+Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
@@ -22,6 +24,7 @@ Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
+Name[ga]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
 Name[nds]=GroupWise
