--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -8,6 +8,8 @@ Comment[ca]=Internet Relay Chat
 Comment[ca@valencia]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
+Comment[ga]=Internet Relay Chat
+Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
 Comment[nn]=Internet Relay Chat
@@ -22,6 +24,7 @@ Name[ca@valencia]=IRC
 Name[de]=IRC
 Name[en_GB]=IRC
 Name[es]=IRC
+Name[ga]=IRC
 Name[km]=IRC​
 Name[nb]=IRC
 Name[nds]=IRC
