--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Protocol Jabber
 Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
 Comment[es]=Protocolo Jabber
+Comment[ga]=Prótacal Jabber
+Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
 Comment[nn]=Jabber-protokoll
@@ -25,6 +27,7 @@ Name[ca@valencia]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[es]=Jabber
+Name[ga]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
