--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Protocol Meanwhile
 Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
 Comment[es]=Protocolo Meanwhile
+Comment[ga]=Prótacal Meanwhile
+Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
 Comment[nn]=Meanwhile-protokoll
@@ -24,6 +26,8 @@ Name[ca@valencia]=Meanwhile
 Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[es]=Meanwhile
+Name[ga]=Meanwhile
+Name[km]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
 Name[nn]=Meanwhile
