--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
 Comment[es]=MSN Messenger
+Comment[ga]=MSN Messenger
+Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nn]=MSN Messenger
@@ -23,6 +25,8 @@ Name[ca@valencia]=MSN Messenger
 Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[es]=MSN Messenger
+Name[ga]=MSN Messenger
+Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
 Name[nn]=MSN Messenger
