--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[es]=Telefonía por internet de Skype
+Comment[ga]=Teileafónaíocht Idirlín Skype
+Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nn]=Skype Internett-telefoni
@@ -23,6 +25,7 @@ Name[ca@valencia]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
 Name[es]=Skype
+Name[ga]=Skype
 Name[km]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
