--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Protocol Yahoo
 Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
 Comment[es]=Protocolo Yahoo
+Comment[ga]=Prótacal Yahoo
+Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
 Comment[nn]=Yahoo!-protokoll
@@ -24,6 +26,7 @@ Name[ca@valencia]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[es]=Yahoo
+Name[ga]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
 Name[nds]=Yahoo
