--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -9,6 +9,8 @@ Comment[ca@valencia]=Protocol ICQ
 Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
 Comment[es]=Protocolo ICQ
+Comment[ga]=Prótacal ICQ
+Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
 Comment[nn]=ICQ-protokoll
@@ -25,6 +27,8 @@ Name[ca@valencia]=ICQ
 Name[de]=ICQ
 Name[en_GB]=ICQ
 Name[es]=ICQ
+Name[ga]=ICQ
+Name[km]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
 Name[nn]=ICQ
