--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -21,6 +21,7 @@ Comment[sv]=Gadu-Gadu protokoll
 Comment[th]=โพรโทคอล Gadu-Gadu
 Comment[uk]=Протокол Gadu-Gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
+Comment[zh_TW]=Gadu-Gadu 協定
 Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
 Name[ca@valencia]=Gadu-Gadu
@@ -39,4 +40,5 @@ Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
+Name[zh_TW]=Gadu-Gadu
 
