--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -19,6 +19,7 @@ Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[th]=ข้อความด่วนทันใจ GroupWise ของโนเวลล์
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
+Comment[zh_TW]=Novell GroupWise 即時訊息
 Name=GroupWise
 Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
@@ -35,4 +36,5 @@ Name[sv]=GroupWise
 Name[th]=GroupWise
 Name[uk]=GroupWise
 Name[x-test]=xxGroupWisexx
+Name[zh_TW]=GroupWise
 
