--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -20,6 +20,7 @@ Comment[sv]=SMS-protokoll
 Comment[th]=โพรโทคอล SMS
 Comment[uk]=Протокол SMS
 Comment[x-test]=xxSMS Protocolxx
+Comment[zh_TW]=SMS 協定
 Name=SMS
 Name[ca]=SMS
 Name[ca@valencia]=SMS
@@ -37,4 +38,5 @@ Name[sv]=SMS
 Name[th]=SMS
 Name[uk]=SMS
 Name[x-test]=xxSMSxx
+Name[zh_TW]=SMS
 
