Refactor detection of calendar format version, to make the function available to Akonadi resource.
svn path=/trunk/KDE/kdepim/; revision=1134156

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(kalarm_calendar_LIB_SRCS
 	identities.cpp
 	kaevent.cpp
 	datetime.cpp
+	version.cpp
 )
 
 kde4_add_library(kalarm_calendar SHARED ${kalarm_calendar_LIB_SRCS})
