--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -19,6 +19,7 @@ Comment[pt_BR]=MSN Messenger
 Comment[sv]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
+Comment[zh_CN]=MSN Messenger
 Comment[zh_TW]=MSN
 Name=MSN Messenger
 Name[ca]=MSN Messenger
@@ -36,5 +37,6 @@ Name[pt_BR]=MSN Messenger
 Name[sv]=MSN Messenger
 Name[uk]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
+Name[zh_CN]=MSN Messenger
 Name[zh_TW]=MSN
 
