--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -19,6 +19,7 @@ Comment[pt_BR]=Telefonia Internet Skype
 Comment[sv]=Skype Internettelefoni
 Comment[uk]=Інтернет-телефонія Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
+Comment[zh_CN]=Skype 互联网电话
 Comment[zh_TW]=Skype 網路電話
 Name=Skype
 Name[ca]=Skype
@@ -37,4 +38,5 @@ Name[sv]=Skype
 Name[th]=Skype
 Name[uk]=Skype
 Name[x-test]=xxSkypexx
+Name[zh_CN]=Skype
 Name[zh_TW]=Skype
