--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -21,6 +21,7 @@ Comment[sv]=AIM-protokoll
 Comment[th]=โพรโทคอล AIM
 Comment[uk]=Протокол AIM
 Comment[x-test]=xxAIM Protocolxx
+Comment[zh_CN]=AIM 协议
 Comment[zh_TW]=AIM 協定
 Name=AIM
 Name[ca]=AIM
@@ -40,5 +41,6 @@ Name[sv]=AIM
 Name[th]=AIM
 Name[uk]=AIM
 Name[x-test]=xxAIMxx
+Name[zh_CN]=AIM
 Name[zh_TW]=AIM
 
