--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -18,6 +18,7 @@ Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[sv]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
+Comment[zh_CN]=IRC
 Comment[zh_TW]=IRC
 Name=IRC
 Name[ca]=IRC
@@ -37,5 +38,6 @@ Name[sv]=IRC
 Name[th]=IRC
 Name[uk]=IRC
 Name[x-test]=xxIRCxx
+Name[zh_CN]=IRC
 Name[zh_TW]=IRC
 
