--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -20,6 +20,7 @@ Comment[sv]=Meanwhile-protokoll
 Comment[th]=โพรโทคอล Meanwhile
 Comment[uk]=Протокол Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
+Comment[zh_CN]=Meanwhile 协议
 Comment[zh_TW]=Meanwhile 協定
 Name=Meanwhile
 Name[ca]=Meanwhile
@@ -38,5 +39,6 @@ Name[sv]=Meanwhile
 Name[th]=Meanwhile
 Name[uk]=Meanwhile
 Name[x-test]=xxMeanwhilexx
+Name[zh_CN]=Meanwhile
 Name[zh_TW]=Meanwhile
 
