--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -20,6 +20,7 @@ Comment[sv]=Yahoo-protokoll
 Comment[th]=โพรโทคอล Yahoo
 Comment[uk]=Протокол Yahoo
 Comment[x-test]=xxYahoo Protocolxx
+Comment[zh_CN]=Yahoo 协议
 Comment[zh_TW]=Yahoo 協定
 Name=Yahoo
 Name[ca]=Yahoo
@@ -38,5 +39,6 @@ Name[sv]=Yahoo
 Name[th]=Yahoo
 Name[uk]=Yahoo
 Name[x-test]=xxYahooxx
+Name[zh_CN]=Yahoo
 Name[zh_TW]=Yahoo
 
