SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1135866

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-KAddressBook-CEWVersion=1
 Name=KAddressbook Instant Messaging Protocol
 Name[ca]=Protocol de missatgeria instantània del KAddressbook
 Name[ca@valencia]=Protocol de missatgeria instantània del KAddressbook
+Name[cs]=KAddressbook instant messaging protokol
 Name[de]=Instant-Messaging-Protokoll im KDE-Adressbuch
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[es]=Protocolo de mensajería instantánea de KAddressbook
