--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/aim
 Comment=AIM Protocol
 Comment[ca]=Protocol AIM
 Comment[ca@valencia]=Protocol AIM
+Comment[cs]=Protokol AIM
 Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
 Comment[es]=Protocolo AIM
@@ -26,6 +27,7 @@ Comment[zh_TW]=AIM 協定
 Name=AIM
 Name[ca]=AIM
 Name[ca@valencia]=AIM
+Name[cs]=AIM
 Name[de]=AIM
 Name[en_GB]=AIM
 Name[es]=AIM
