--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/gadu
 Comment=Gadu-Gadu Protocol
 Comment[ca]=Protocol Gadu-Gadu
 Comment[ca@valencia]=Protocol Gadu-Gadu
+Comment[cs]=Protokol Gadu-Gadu
 Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[es]=Protocolo Gadu-Gadu
@@ -26,6 +27,7 @@ Comment[zh_TW]=Gadu-Gadu 協定
 Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
 Name[ca@valencia]=Gadu-Gadu
+Name[cs]=Gadu-Gadu
 Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[es]=Gadu-Gadu
