--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/groupwise
 Comment=Novell GroupWise Messenger
 Comment[ca]=Novell GroupWise Messenger
 Comment[ca@valencia]=Novell GroupWise Messenger
+Comment[cs]=Novell GroupWise komunikátor
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[ga]=Teachtaire Novell GroupWise
@@ -24,6 +25,7 @@ Comment[zh_TW]=Novell GroupWise 即時訊息
 Name=GroupWise
 Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
+Name[cs]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
 Name[ga]=GroupWise
