--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/icq
 Comment=ICQ Protocol
 Comment[ca]=Protocol ICQ
 Comment[ca@valencia]=Protocol ICQ
+Comment[cs]=Protokol ICQ
 Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
 Comment[es]=Protocolo ICQ
@@ -26,6 +27,7 @@ Comment[zh_TW]=ICQ 協定
 Name=ICQ
 Name[ca]=ICQ
 Name[ca@valencia]=ICQ
+Name[cs]=ICQ
 Name[de]=ICQ
 Name[en_GB]=ICQ
 Name[es]=ICQ
