--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/xmpp
 Comment=Jabber Protocol
 Comment[ca]=Protocol Jabber
 Comment[ca@valencia]=Protocol Jabber
+Comment[cs]=Protokol Jabber
 Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
 Comment[es]=Protocolo Jabber
@@ -26,6 +27,7 @@ Comment[zh_TW]=Jabber 協定
 Name=Jabber
 Name[ca]=Jabber
 Name[ca@valencia]=Jabber
+Name[cs]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[es]=Jabber
