--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/meanwhile
 Comment=Meanwhile Protocol
 Comment[ca]=Protocol Meanwhile
 Comment[ca@valencia]=Protocol Meanwhile
+Comment[cs]=Protokol Meanwhile
 Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
 Comment[es]=Protocolo Meanwhile
@@ -25,6 +26,7 @@ Comment[zh_TW]=Meanwhile 協定
 Name=Meanwhile
 Name[ca]=Meanwhile
 Name[ca@valencia]=Meanwhile
+Name[cs]=Meanwhile
 Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[es]=Meanwhile
