--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/msn
 Comment=MSN Messenger
 Comment[ca]=MSN Messenger
 Comment[ca@valencia]=MSN Messenger
+Comment[cs]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
 Comment[es]=MSN Messenger
@@ -24,6 +25,7 @@ Comment[zh_TW]=MSN
 Name=MSN Messenger
 Name[ca]=MSN Messenger
 Name[ca@valencia]=MSN Messenger
+Name[cs]=MSN Messenger
 Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[es]=MSN Messenger
