--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/skype
 Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
 Comment[ca@valencia]=Telefonia d'Internet Skype
+Comment[cs]=Internetová telefonie Skype
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[es]=Telefonía por internet de Skype
@@ -24,6 +25,7 @@ Comment[zh_TW]=Skype 網路電話
 Name=Skype
 Name[ca]=Skype
 Name[ca@valencia]=Skype
+Name[cs]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
 Name[es]=Skype
