--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/sms
 Comment=SMS Protocol
 Comment[ca]=Protocol SMS
 Comment[ca@valencia]=Protocol SMS
+Comment[cs]=SMS protokol
 Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
 Comment[es]=Protocolo SMS
@@ -25,6 +26,7 @@ Comment[zh_TW]=SMS 協定
 Name=SMS
 Name[ca]=SMS
 Name[ca@valencia]=SMS
+Name[cs]=SMS
 Name[de]=SMS
 Name[en_GB]=SMS
 Name[es]=SMS
