--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/yahoo
 Comment=Yahoo Protocol
 Comment[ca]=Protocol Yahoo
 Comment[ca@valencia]=Protocol Yahoo
+Comment[cs]=Protokol Yahoo
 Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
 Comment[es]=Protocolo Yahoo
@@ -25,6 +26,7 @@ Comment[zh_TW]=Yahoo 協定
 Name=Yahoo
 Name[ca]=Yahoo
 Name[ca@valencia]=Yahoo
+Name[cs]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[es]=Yahoo
