--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/irc
 Comment=Internet Relay Chat
 Comment[ca]=Internet Relay Chat
 Comment[ca@valencia]=Internet Relay Chat
+Comment[cs]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[ga]=Internet Relay Chat
@@ -23,6 +24,7 @@ Comment[zh_TW]=IRC
 Name=IRC
 Name[ca]=IRC
 Name[ca@valencia]=IRC
+Name[cs]=IRC
 Name[de]=IRC
 Name[en_GB]=IRC
 Name[es]=IRC
