--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ########### next target ###############
 set(kalarm_calendar_LIB_SRCS
-	kcalendar.cpp
+	kacalendar.cpp
 	karecurrence.cpp
 	alarmtext.cpp
 	identities.cpp
