Move Akonadi attribute classes, and mime type definitions, into common library
svn path=/trunk/KDE/kdepim/; revision=1138795

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,22 @@ set(kalarm_calendar_LIB_SRCS
 	datetime.cpp
 	version.cpp
 )
+if(BUILD_akonadi)
+    set(kalarm_calendar_LIB_SRCS ${kalarm_calendar_LIB_SRCS}
+	collectionattribute.cpp
+	eventattribute.cpp
+    )
+endif(BUILD_akonadi)
 
 kde4_add_library(kalarm_calendar SHARED ${kalarm_calendar_LIB_SRCS})
 
-target_link_libraries(kalarm_calendar ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
-target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+if(BUILD_akonadi)
+  target_link_libraries(kalarm_calendar ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+  target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+else(BUILD_akonadi)
+  target_link_libraries(kalarm_calendar ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+  target_link_libraries(kalarm_calendar LINK_INTERFACE_LIBRARIES ${KDEPIMLIBS_KCAL_LIBS} ${KDEPIMLIBS_KPIMIDENTITIES_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS})
+endif(BUILD_akonadi)
 
 set_target_properties(kalarm_calendar PROPERTIES 
    VERSION ${GENERIC_LIB_VERSION} 
