SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1138982

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -6,6 +6,7 @@ Name=KAddressbook Instant Messaging Protocol
 Name[ca]=Protocol de missatgeria instantània del KAddressbook
 Name[ca@valencia]=Protocol de missatgeria instantània del KAddressbook
 Name[cs]=KAddressbook instant messaging protokol
+Name[da]=KAddressbook instant messaging-protokol
 Name[de]=Instant-Messaging-Protokoll im KDE-Adressbuch
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[es]=Protocolo de mensajería instantánea de KAddressbook
@@ -13,6 +14,7 @@ Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
 Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
+Name[nl]=KAddressbook Instant Messaging-protocol
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
