--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -7,12 +7,14 @@ Comment=Novell GroupWise Messenger
 Comment[ca]=Novell GroupWise Messenger
 Comment[ca@valencia]=Novell GroupWise Messenger
 Comment[cs]=Novell GroupWise komunikátor
+Comment[da]=Novell GroupWise Messenger
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[ga]=Teachtaire Novell GroupWise
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
+Comment[nl]=Protocol voor Novell GroupWise Messenger
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
@@ -26,12 +28,14 @@ Name=GroupWise
 Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
 Name[cs]=GroupWise
+Name[da]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
 Name[ga]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
 Name[nds]=GroupWise
+Name[nl]=GroupWise
 Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
