--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -7,6 +7,7 @@ Comment=ICQ Protocol
 Comment[ca]=Protocol ICQ
 Comment[ca@valencia]=Protocol ICQ
 Comment[cs]=Protokol ICQ
+Comment[da]=ICQ-protokollen
 Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
 Comment[es]=Protocolo ICQ
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal ICQ
 Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
+Comment[nl]=ICQ-protocol
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
@@ -28,6 +30,7 @@ Name=ICQ
 Name[ca]=ICQ
 Name[ca@valencia]=ICQ
 Name[cs]=ICQ
+Name[da]=ICQ
 Name[de]=ICQ
 Name[en_GB]=ICQ
 Name[es]=ICQ
@@ -35,6 +38,7 @@ Name[ga]=ICQ
 Name[km]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
+Name[nl]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
