--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -7,12 +7,14 @@ Comment=Internet Relay Chat
 Comment[ca]=Internet Relay Chat
 Comment[ca@valencia]=Internet Relay Chat
 Comment[cs]=Internet Relay Chat
+Comment[da]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[ga]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
+Comment[nl]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
@@ -25,6 +27,7 @@ Name=IRC
 Name[ca]=IRC
 Name[ca@valencia]=IRC
 Name[cs]=IRC
+Name[da]=IRC
 Name[de]=IRC
 Name[en_GB]=IRC
 Name[es]=IRC
@@ -32,6 +35,7 @@ Name[ga]=IRC
 Name[km]=IRC​
 Name[nb]=IRC
 Name[nds]=IRC
+Name[nl]=IRC
 Name[nn]=IRC
 Name[pt]=IRC
 Name[pt_BR]=IRC
