--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Jabber Protocol
 Comment[ca]=Protocol Jabber
 Comment[ca@valencia]=Protocol Jabber
 Comment[cs]=Protokol Jabber
+Comment[da]=Jabber-protokollen
 Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
 Comment[es]=Protocolo Jabber
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
+Comment[nl]=Jabber-protocol
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
@@ -28,6 +30,7 @@ Name=Jabber
 Name[ca]=Jabber
 Name[ca@valencia]=Jabber
 Name[cs]=Jabber
+Name[da]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[es]=Jabber
@@ -35,6 +38,7 @@ Name[ga]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
+Name[nl]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
