--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
 Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[cs]=Internetová telefonie Skype
+Comment[da]=Skype internettelefoni
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[es]=Telefonía por internet de Skype
@@ -14,6 +15,7 @@ Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
+Comment[nl]=Skype internet-telefonie
 Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
@@ -26,6 +28,7 @@ Name=Skype
 Name[ca]=Skype
 Name[ca@valencia]=Skype
 Name[cs]=Skype
+Name[da]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
 Name[es]=Skype
@@ -33,6 +36,7 @@ Name[ga]=Skype
 Name[km]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
+Name[nl]=Skype
 Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
