--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -7,6 +7,7 @@ Comment=SMS Protocol
 Comment[ca]=Protocol SMS
 Comment[ca@valencia]=Protocol SMS
 Comment[cs]=SMS protokol
+Comment[da]=SMS-protokol
 Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
 Comment[es]=Protocolo SMS
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal SMS
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
+Comment[nl]=SMS-protocol
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
@@ -27,6 +29,7 @@ Name=SMS
 Name[ca]=SMS
 Name[ca@valencia]=SMS
 Name[cs]=SMS
+Name[da]=SMS
 Name[de]=SMS
 Name[en_GB]=SMS
 Name[es]=SMS
@@ -34,6 +37,7 @@ Name[ga]=SMS
 Name[km]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
+Name[nl]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
