--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Yahoo Protocol
 Comment[ca]=Protocol Yahoo
 Comment[ca@valencia]=Protocol Yahoo
 Comment[cs]=Protokol Yahoo
+Comment[da]=Yahoo-protokollen
 Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
 Comment[es]=Protocolo Yahoo
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
+Comment[nl]=Yahoo-protocol
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
@@ -27,6 +29,7 @@ Name=Yahoo
 Name[ca]=Yahoo
 Name[ca@valencia]=Yahoo
 Name[cs]=Yahoo
+Name[da]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[es]=Yahoo
@@ -34,6 +37,7 @@ Name[ga]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
 Name[nds]=Yahoo
+Name[nl]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
