--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -7,6 +7,7 @@ Comment=AIM Protocol
 Comment[ca]=Protocol AIM
 Comment[ca@valencia]=Protocol AIM
 Comment[cs]=Protokol AIM
+Comment[da]=AIM-protokollen
 Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
 Comment[es]=Protocolo AIM
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal AIM
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
+Comment[nl]=AIM-protocol
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
@@ -28,6 +30,7 @@ Name=AIM
 Name[ca]=AIM
 Name[ca@valencia]=AIM
 Name[cs]=AIM
+Name[da]=AIM
 Name[de]=AIM
 Name[en_GB]=AIM
 Name[es]=AIM
@@ -35,6 +38,7 @@ Name[ga]=AIM
 Name[km]=AIM​
 Name[nb]=AIM
 Name[nds]=AIM
+Name[nl]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
