--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Gadu-Gadu Protocol
 Comment[ca]=Protocol Gadu-Gadu
 Comment[ca@valencia]=Protocol Gadu-Gadu
 Comment[cs]=Protokol Gadu-Gadu
+Comment[da]=Gadu-Gadu-protokollen
 Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[es]=Protocolo Gadu-Gadu
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
+Comment[nl]=Gadu-Gadu-protocol
 Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
@@ -28,6 +30,7 @@ Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
 Name[ca@valencia]=Gadu-Gadu
 Name[cs]=Gadu-Gadu
+Name[da]=Gadu-Gadu
 Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[es]=Gadu-Gadu
@@ -35,6 +38,7 @@ Name[ga]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
+Name[nl]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
