--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -7,6 +7,7 @@ Comment=Meanwhile Protocol
 Comment[ca]=Protocol Meanwhile
 Comment[ca@valencia]=Protocol Meanwhile
 Comment[cs]=Protokol Meanwhile
+Comment[da]=Meanwhile-protokollen
 Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
 Comment[es]=Protocolo Meanwhile
@@ -14,6 +15,7 @@ Comment[ga]=Prótacal Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
+Comment[nl]=Meanwhile-protocol
 Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
@@ -27,6 +29,7 @@ Name=Meanwhile
 Name[ca]=Meanwhile
 Name[ca@valencia]=Meanwhile
 Name[cs]=Meanwhile
+Name[da]=Meanwhile
 Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[es]=Meanwhile
@@ -34,6 +37,7 @@ Name[ga]=Meanwhile
 Name[km]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
+Name[nl]=Meanwhile
 Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
