--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -7,6 +7,7 @@ Comment=MSN Messenger
 Comment[ca]=MSN Messenger
 Comment[ca@valencia]=MSN Messenger
 Comment[cs]=MSN Messenger
+Comment[da]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
 Comment[es]=MSN Messenger
@@ -14,6 +15,7 @@ Comment[ga]=MSN Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
+Comment[nl]=MSN Messenger
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=MSN Messenger
@@ -26,6 +28,7 @@ Name=MSN Messenger
 Name[ca]=MSN Messenger
 Name[ca@valencia]=MSN Messenger
 Name[cs]=MSN Messenger
+Name[da]=MSN Messenger
 Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[es]=MSN Messenger
@@ -33,6 +36,7 @@ Name[ga]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
+Name[nl]=MSN Messenger
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
