SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1140602

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol AIM
 Comment[da]=AIM-protokollen
 Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
+Comment[eo]=AIM-Protokolo
 Comment[es]=Protocolo AIM
+Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[nb]=AIM-protokoll
@@ -33,7 +35,9 @@ Name[cs]=AIM
 Name[da]=AIM
 Name[de]=AIM
 Name[en_GB]=AIM
+Name[eo]=AIM
 Name[es]=AIM
+Name[fr]=AIM
 Name[ga]=AIM
 Name[km]=AIM​
 Name[nb]=AIM
