--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -10,6 +10,8 @@ Comment[cs]=Novell GroupWise komunikátor
 Comment[da]=Novell GroupWise Messenger
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
+Comment[eo]=Novell GroupWise mesaĝilo
+Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
@@ -31,6 +33,8 @@ Name[cs]=GroupWise
 Name[da]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
+Name[eo]=GroupWise
+Name[fr]=GroupWise
 Name[ga]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
