--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -10,6 +10,8 @@ Comment[cs]=Internet Relay Chat
 Comment[da]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
+Comment[eo]=Interreta plusenda babilado
+Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[nb]=Internet Relay Chat
@@ -30,7 +32,9 @@ Name[cs]=IRC
 Name[da]=IRC
 Name[de]=IRC
 Name[en_GB]=IRC
+Name[eo]=IRC
 Name[es]=IRC
+Name[fr]=IRC
 Name[ga]=IRC
 Name[km]=IRC​
 Name[nb]=IRC
