--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol Jabber
 Comment[da]=Jabber-protokollen
 Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
+Comment[eo]=Jabber Protokolo
 Comment[es]=Protocolo Jabber
+Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
@@ -33,7 +35,9 @@ Name[cs]=Jabber
 Name[da]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
+Name[eo]=Jabber
 Name[es]=Jabber
+Name[fr]=Jabber
 Name[ga]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
