--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol Meanwhile
 Comment[da]=Meanwhile-protokollen
 Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
+Comment[eo]=Meanwhile Protokolo
 Comment[es]=Protocolo Meanwhile
+Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
@@ -32,7 +34,9 @@ Name[cs]=Meanwhile
 Name[da]=Meanwhile
 Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
+Name[eo]=Meanwhile
 Name[es]=Meanwhile
+Name[fr]=Meanwhile
 Name[ga]=Meanwhile
 Name[km]=Meanwhile
 Name[nb]=Meanwhile
