--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=MSN Messenger
 Comment[da]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
+Comment[eo]=MSN Mesaĝilo
 Comment[es]=MSN Messenger
+Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[nb]=MSN Messenger
@@ -31,7 +33,9 @@ Name[cs]=MSN Messenger
 Name[da]=MSN Messenger
 Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
+Name[eo]=MSN mesaĝilo
 Name[es]=MSN Messenger
+Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[nb]=MSN Messenger
