--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=SMS protokol
 Comment[da]=SMS-protokol
 Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
+Comment[eo]=SMS Protokolo
 Comment[es]=Protocolo SMS
+Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
@@ -32,7 +34,9 @@ Name[cs]=SMS
 Name[da]=SMS
 Name[de]=SMS
 Name[en_GB]=SMS
+Name[eo]=SMS
 Name[es]=SMS
+Name[fr]=SMS
 Name[ga]=SMS
 Name[km]=SMS
 Name[nb]=SMS
