--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol Yahoo
 Comment[da]=Yahoo-protokollen
 Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
+Comment[eo]=Yahoo Protokolo
 Comment[es]=Protocolo Yahoo
+Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
@@ -32,7 +34,9 @@ Name[cs]=Yahoo
 Name[da]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
+Name[eo]=Yahoo
 Name[es]=Yahoo
+Name[fr]=Yahoo
 Name[ga]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
