--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -9,7 +9,9 @@ Name[cs]=KAddressbook instant messaging protokol
 Name[da]=KAddressbook instant messaging-protokol
 Name[de]=Instant-Messaging-Protokoll im KDE-Adressbuch
 Name[en_GB]=KAddressbook Instant Messaging Protocol
+Name[eo]=KAddressbook Rapidmesaĝila Protokolo
 Name[es]=Protocolo de mensajería instantánea de KAddressbook
+Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
 Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
 Name[nb]=KAdressbook lynmeldingsprotokoll
