--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol Gadu-Gadu
 Comment[da]=Gadu-Gadu-protokollen
 Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
+Comment[eo]=Gadu-Gadu Protokolo
 Comment[es]=Protocolo Gadu-Gadu
+Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
@@ -33,7 +35,9 @@ Name[cs]=Gadu-Gadu
 Name[da]=Gadu-Gadu
 Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
+Name[eo]=Gadu-Gadu
 Name[es]=Gadu-Gadu
+Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
