--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Protokol ICQ
 Comment[da]=ICQ-protokollen
 Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
+Comment[eo]=ICQ Protokolo
 Comment[es]=Protocolo ICQ
+Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
 Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
@@ -33,7 +35,9 @@ Name[cs]=ICQ
 Name[da]=ICQ
 Name[de]=ICQ
 Name[en_GB]=ICQ
+Name[eo]=ICQ
 Name[es]=ICQ
+Name[fr]=ICQ
 Name[ga]=ICQ
 Name[km]=ICQ
 Name[nb]=ICQ
