--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -10,7 +10,9 @@ Comment[cs]=Internetová telefonie Skype
 Comment[da]=Skype internettelefoni
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
+Comment[eo]=Skype Interreta Telefonado
 Comment[es]=Telefonía por internet de Skype
+Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[nb]=Skype IP-telefoni
@@ -31,7 +33,9 @@ Name[cs]=Skype
 Name[da]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
+Name[eo]=kype
 Name[es]=Skype
+Name[fr]=Skype
 Name[ga]=Skype
 Name[km]=Skype
 Name[nb]=Skype
