Use a progress spinner on collections while fetching items in it.
svn path=/trunk/KDE/kdepimlibs/; revision=1141341

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -126,6 +126,7 @@ set( akonadikde_LIB_SRC
   preprocessorbase.cpp
   preprocessorbase_p.cpp
   protocolhelper.cpp
+  progressspinnerdelegate.cpp
   resourcebase.cpp
   resourcescheduler.cpp
   resourceselectjob.cpp
