--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -58,7 +58,7 @@ Comment[fr]=Configurer les actions sur les contacts
 Comment[ga]=Cumraigh na Gníomhartha Teagmhála
 Comment[gl]=Configurar as accións de contacto
 Comment[hu]=A névjegyműveletek beállítása
-Comment[it]=Configua le azioni per i contatti
+Comment[it]=Configura le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lt]=Konfigūruoti kontaktų veiksmus
