SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1142112

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -57,7 +57,7 @@ Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
 Comment[ga]=Cumraigh na Gníomhartha Teagmhála
 Comment[gl]=Configurar as accións de contacto
-Comment[it]=Configua le azioni per i contatti
+Comment[it]=Configura le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lt]=Konfigūruoti kontaktų veiksmus
