--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${Boost_INCLUDE_DIR}
     ${CMAKE_SOURCE_DIR}/kabc
+    ${SOPRANO_INCLUDE_DIR}
 )
 
 add_subdirectory(tests)
